--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "axios": "^0.21.1",
     "firebase": "^8.6.2",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.9.0",
+    "micro": "^9.3.4",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "^3.23.3",
     "react": "17.0.1",
